Fix modal dialogue component styles
- component was appearing blurry and (in the component guide) not reaching the full width of the screen
- in an application, overlay was also not covering the site header
- seemed that the filter being applied to elements within the body was not working correctly (despite appearing to be fine in the apps that currently use this component, problem was noticed in the component guide)
- solution is to remove the blur class and the associated filters, and instead apply a backdrop-filter to the dialogue overlay element, so that everything behind it is blurred/darkened
- had to remove the background colour and opacity from this element as it doesn't play nice with backdrop-filter (basically ignores it in favour of the colour)

--- a/app/assets/stylesheets/govuk_publishing_components/components/_modal-dialogue.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_modal-dialogue.scss
@@ -71,10 +71,9 @@ $govuk-modal-wide-breakpoint: $govuk-page-width + $govuk-modal-margin * 2 + $gov
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: .8;
-  background: govuk-colour("black");
   pointer-events: none;
   touch-action: none;
+  backdrop-filter: blur(2px) brightness(0.4);
 }
 
 .gem-o-template--modal {
@@ -85,17 +84,6 @@ $govuk-modal-wide-breakpoint: $govuk-page-width + $govuk-modal-margin * 2 + $gov
 
 .gem-o-template__body--modal {
   overflow: hidden;
-}
-
-.gem-o-template__body--blur {
-  .govuk-skip-link,
-  .govuk-header,
-  .govuk-phase-banner,
-  .govuk-width-container .govuk-back-link,
-  .govuk-footer,
-  .govuk-main-wrapper {
-    filter: blur(2px);
-  }
 }
 
 .gem-c-modal-dialogue__header {
